lightning-picklist-app/main/default/objects/Car__c/fields/BuildingStage__c.field-meta.xml
<CustomField>
    <fullName>BuildingStage__c</fullName>
    <label>Building Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type</fullName>
            </value>
            <value>
                <fullName>Model</fullName>
            </value>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>