lightning-picklist-app/main/default/objects/Car__c/fields/Customer_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Full_Name__c</fullName>
    <label>Customer Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>