lightning-picklist-app/main/default/objects/Car__c/fields/MSRP_Price__c.field-meta.xml
<CustomField>
    <fullName>MSRP_Price__c</fullName>
    <label>MSRP Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>