lightning-picklist-app/main/default/objects/Car__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>