lightning-picklist-app/main/default/objects/Car__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SportsCar</fullName>
                <label>Sports Car</label>
            </value>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>MiniVan</fullName>
            </value>
            <value>
                <fullName>PickupTruck</fullName>
                <label>Pickup Truck</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>